# pyprojectboard

./: .gitignore  README.md  pyproject.toml  pyprojectboard.py  requirements.txt
pyprojectboard/data/: custom_dict.py  data.py
pyprojectboard/export/: __init__.py  latex.py
pyprojectboard/qt_gui/: __init__.py  elements.py  project_views.py  qt_app.py  settings.py  style.qss  task_views.py  theme.xml
scripts/: install_local_linux.bash
src/: main.py
src/data/: data.py  defaults.py  settings.py  state.py
src/gui/qt/: main_window.py  projectboard_horizontal.ui  settings.ui  style.qss
src/unittests/: __init__.py  test1.json  test_data.py  test_gui_helpers.py  test_settings.py  test_state.py
