[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyprojectboard"
version = "2.0.0a1"
dependencies = [
	"PySide6==6.8.0",
	"PySide6_Addons==6.8.0",
	"PySide6_Essentials==6.8.0",
	"shiboken6==6.8.0",
	"tinydb==4.8.2",
]
requires-python = ">= 3.11"

authors = [
  {name = "Berni K", email = "berni86@duck.com"},
]
maintainers = [
  {name = "Berni K", email = "berni86@duck.com"},
]

description = "Program to manage projects aimed at indviduals"
readme = "README.md"
license = {file = "LICENSE"}

classifiers = [
  "Development Status :: 3 - Alpha",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3.11",
]

[project.urls]
Repository = "https://github.com/bernik86/pyprojectboard"

[tool.isort]
profile = "black"
multi_line_output = 7
force_single_line = true

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pylint.format]
max-line-length = "100"

[pycodestyle]
max-line-length = 100

[tool.mypy]
show_error_codes = true
allow_redefinition = true
show_column_numbers = true
